--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-chartjs-2": "^5.2.0",
+    "chart.js": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
