--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ backend/.env
 #––– Node / React frontend –––––––––––––––––––––––––––
 frontend/node_modules/
 frontend/dist/
+node_modules/
+package.json
+package-lock.json
 *.log
 npm-debug.log*
 yarn-debug.log*
