--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,8 @@ backend/.env
 frontend/node_modules/
 frontend/dist/
 node_modules/
-package.json
-package-lock.json
+/package.json
+/package-lock.json
 *.log
 npm-debug.log*
 yarn-debug.log*
