--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,9 @@
     "chart.js": "^4.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "REACT_APP_API_BASE=http://localhost:8001 react-scripts start",
+    "build": "REACT_APP_API_BASE=http://localhost:8001 react-scripts build",
+    "test": "REACT_APP_API_BASE=http://localhost:8001 react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
