--- a/infra/k8s/detector-deployment.yaml
+++ b/infra/k8s/detector-deployment.yaml
@@ -17,6 +17,17 @@ spec:
       - name: detector
         image: detector:latest
         imagePullPolicy: IfNotPresent
+        env:
+        - name: SECRET_KEY
+          valueFrom:
+            secretKeyRef:
+              name: detector-env
+              key: SECRET_KEY
+        - name: DATABASE_URL
+          valueFrom:
+            secretKeyRef:
+              name: detector-env
+              key: DATABASE_URL
         args:
           - uvicorn
           - app.main:app
