log zero trust failures

--- a/infra/k8s/detector-deployment.yaml
+++ b/infra/k8s/detector-deployment.yaml
@@ -28,6 +28,11 @@ spec:
             secretKeyRef:
               name: detector-env
               key: DATABASE_URL
+        - name: ZERO_TRUST_API_KEY
+          valueFrom:
+            secretKeyRef:
+              name: detector-env
+              key: ZERO_TRUST_API_KEY
         args:
           - uvicorn
           - app.main:app
