--- a/demo-shop/package.json
+++ b/demo-shop/package.json
@@ -7,9 +7,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
-    "axios": "^1.6.8"
+    "express": "^4.18.2",
+    "express-session": "^1.17.3"
   }
 }
