--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,3 +11,5 @@ DEMO_SHOP_URL=http://localhost:3005
 ANOMALY_DETECTION=true
 REAUTH_PER_REQUEST=false
 ZERO_TRUST_API_KEY=demo-key
+OIDC_ISSUER=https://keycloak.example.com/realms/demo
+OIDC_AUDIENCE=demo-api
