--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,19 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.16",
     "chart.js": "^4.4.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.427.0",
+    "postcss": "^8.4.31",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.12.3",
+    "tailwind-merge": "^2.1.0",
+    "tailwindcss": "^3.4.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
