--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "cross-env REACT_APP_API_BASE=http://localhost:8001 REACT_APP_SHOP_URL=http://localhost:3005 react-scripts start",
-    "build": "cross-env REACT_APP_API_BASE=http://localhost:8001 REACT_APP_SHOP_URL=http://localhost:3005 react-scripts build",
-    "test": "cross-env REACT_APP_API_BASE=http://localhost:8001 REACT_APP_SHOP_URL=http://localhost:3005 react-scripts test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
