docs: note API base configuration

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,5 @@
-REACT_APP_API_BASE=http://localhost:8001
+# Base URL for the backend API.
+# Leave unset to allow Create React App's proxy to reach http://localhost:8001.
+# If the API runs elsewhere, set REACT_APP_API_BASE to the full URL, e.g.:
+# REACT_APP_API_BASE=https://api.example.com
+# REACT_APP_API_BASE=http://localhost:8001
