--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,5 +9,7 @@ REGISTER_WITH_DEMOSHOP=true
 LOGIN_WITH_DEMOSHOP=true
 DEMO_SHOP_URL=http://localhost:3005
 ANOMALY_DETECTION=true
+# Algorithm for anomaly detection
+ANOMALY_MODEL=lof
 REAUTH_PER_REQUEST=false
 ZERO_TRUST_API_KEY=demo-key
