Connect demo shop login

--- a/frontend/.env
+++ b/frontend/.env
@@ -3,3 +3,4 @@
 # If the API runs elsewhere, set REACT_APP_API_BASE to the full URL, e.g.:
 # REACT_APP_API_BASE=https://api.example.com
 # REACT_APP_API_BASE=http://localhost:8001
+REACT_APP_SHOP_URL=http://localhost:3005
