docs: clarify API forwarding configuration

--- a/demo-shop/.env.example
+++ b/demo-shop/.env.example
@@ -3,6 +3,7 @@
 FORWARD_API=true
 # Base URL of the API (if using kubectl port-forward, match the local port)
 API_BASE=http://localhost:8001
-# Optional: API_PORT=8001
+# Optional port override used if API_BASE is unset
+# API_PORT=8001
 # Replace with the ZERO_TRUST_API_KEY from the APIShield+ backend
 API_KEY=changeme
