--- a/demo-shop/.env.example
+++ b/demo-shop/.env.example
@@ -1,9 +1,9 @@
 # Environment configuration for Demo Shop
 # Forward shop logins/registrations to the API. Defaults to true.
 FORWARD_API=true
-# Base URL of the API (if using kubectl port-forward, match the local port)
+# Base URL of the API. When using kubectl port-forward, match the local port.
 API_BASE=http://localhost:8001
-# Optional port override used if API_BASE is unset
+# Optional port override used if API_BASE is unset. Set to the forwarded local port.
 # API_PORT=8001
 # Replace with the ZERO_TRUST_API_KEY from the APIShield+ backend
 API_KEY=changeme
