--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 DATABASE_URL=sqlite:///./app.db
 SECRET_KEY=super-secret-key
-# Comma-separated list of hosts allowed by CORS
+# Comma-separated list of hosts allowed by CORS (include demo-shop port)
 ALLOW_ORIGINS=http://localhost:8001,http://localhost:3000,http://localhost:3005
 # Optional tuning parameters
 FAIL_LIMIT=5
