--- a/demo-shop/.env
+++ b/demo-shop/.env
@@ -1,4 +1,3 @@
+API_BASE=http://127.0.0.1:8001
 FORWARD_API=true
-API_BASE=http://localhost:8001
-# Optional: API_PORT=8001
-API_KEY=changeme
+API_KEY=<your ZERO_TRUST_API_KEY>
