docs: document API base for dashboard

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,6 @@
-# Base URL for the backend API.
-# Leave unset to allow Create React App's proxy to reach http://localhost:8001.
-# If the API runs elsewhere, set REACT_APP_API_BASE to the full URL, e.g.:
-# REACT_APP_API_BASE=https://api.example.com
-# REACT_APP_API_BASE=http://localhost:8001
+# Base URL for the backend API. Set this so apiFetch('/login') resolves to
+# the correct server. The development backend listens on 127.0.0.1:8001.
+REACT_APP_API_BASE=http://127.0.0.1:8001
+
+# URL for the demo shop used by the dashboard.
 REACT_APP_SHOP_URL=http://localhost:3005
