route shop UI requests through session

--- a/frontend/.env
+++ b/frontend/.env
@@ -4,3 +4,5 @@ REACT_APP_API_BASE=http://127.0.0.1:8001
 
 # URL for the demo shop used by the dashboard.
 REACT_APP_SHOP_URL=http://localhost:3005
+
+# When deploying, update the above URL to match the shop's origin.
