--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.3.7",
     "chart.js": "^4.4.0",
     "react": "^19.1.0",
+    "react-bootstrap": "^3.0.0-beta.3",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
