--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.7",
     "chart.js": "^4.4.0",
+    "jwt-decode": "^3.1.2",
     "react": "^19.1.0",
     "react-bootstrap": "^3.0.0-beta.3",
     "react-chartjs-2": "^5.2.0",
