--- a/frontend/.env
+++ b/frontend/.env
@@ -6,3 +6,4 @@ REACT_APP_API_BASE=http://127.0.0.1:8001
 REACT_APP_SHOP_URL=http://localhost:3005
 
 # When deploying, update the above URL to match the shop's origin.
+REACT_APP_API_KEY=monday
