--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,7 @@
 DATABASE_URL=sqlite:///./app.db
 SECRET_KEY=super-secret-key
 # Comma-separated list of hosts allowed by CORS (include demo-shop port)
-ALLOW_ORIGINS=http://localhost:8001,http://localhost:3000,http://localhost:3005
+ALLOW_ORIGINS=http://localhost:8001,http://localhost:3000,http://localhost:3005,http://127.0.0.1:3000,http://127.0.0.1:3005
 # Optional tuning parameters
 FAIL_LIMIT=5
 FAIL_WINDOW_SECONDS=60
