--- a/demo-shop/.env.example
+++ b/demo-shop/.env.example
@@ -5,5 +5,7 @@ FORWARD_API=true
 API_BASE=http://localhost:8001
 # Optional port override used if API_BASE is unset. Set to the forwarded local port.
 # API_PORT=8001
+# Override the default API request timeout (ms). Defaults to 10000.
+API_TIMEOUT_MS=5000
 # Replace with the ZERO_TRUST_API_KEY from the APIShield+ backend
 API_KEY=changeme
