--- a/demo-shop/.env
+++ b/demo-shop/.env
@@ -1,4 +1,4 @@
 API_BASE=http://127.0.0.1:8001
 FORWARD_API=true
-REACT_APP_API_KEY="your ZERO_TRUST_API_KEY"
+API_KEY=demo-key
 API_TIMEOUT_MS=5000
