--- a/backend/.env
+++ b/backend/.env
@@ -1,15 +1,16 @@
 DATABASE_URL=sqlite:///./app.db
-SECRET_KEY=super-secret-key
-# Optional tuning parameters
-FAIL_LIMIT=5
+SECRET_KEY=super-secret-key-change-me
+
+# Allow more failures before blocking the client to facilitate testing.
+FAIL_LIMIT=500
 FAIL_WINDOW_SECONDS=60
-DB_ECHO=true
+
+DB_ECHO=false
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REGISTER_WITH_DEMOSHOP=true
 LOGIN_WITH_DEMOSHOP=true
-DEMO_SHOP_URL=http://127.0.0.1:3005
+DEMO_SHOP_URL=http://localhost:3005
 ANOMALY_DETECTION=true
-# Algorithm for anomaly detection
 ANOMALY_MODEL=lof
 REAUTH_PER_REQUEST=false
 ZERO_TRUST_API_KEY=demo-key
