Add demo shop env for API forwarding

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,7 +7,7 @@ DB_ECHO=true
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REGISTER_WITH_DEMOSHOP=true
 LOGIN_WITH_DEMOSHOP=true
-DEMO_SHOP_URL=http://localhost:3005
+DEMO_SHOP_URL=http://127.0.0.1:3005
 ANOMALY_DETECTION=true
 REAUTH_PER_REQUEST=false
 ZERO_TRUST_API_KEY=demo-key
