--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 DATABASE_URL=sqlite:///./app.db
 SECRET_KEY=super-secret-key
-# Optional tuning parameters
+# Optional tuning parameters for extra control
 FAIL_LIMIT=5
 FAIL_WINDOW_SECONDS=60
 DB_ECHO=true
@@ -9,7 +9,5 @@ REGISTER_WITH_DEMOSHOP=true
 LOGIN_WITH_DEMOSHOP=true
 DEMO_SHOP_URL=http://127.0.0.1:3005
 ANOMALY_DETECTION=true
-# Algorithm for anomaly detection
-ANOMALY_MODEL=lof
 REAUTH_PER_REQUEST=false
 ZERO_TRUST_API_KEY=demo-key
