--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,5 @@
 DATABASE_URL=sqlite:///./app.db
 SECRET_KEY=super-secret-key
-# Comma-separated list of hosts allowed by CORS (include demo-shop port)
-ALLOW_ORIGINS=http://localhost:8001,http://localhost:3000,http://localhost:3005
 # Optional tuning parameters
 FAIL_LIMIT=5
 FAIL_WINDOW_SECONDS=60
@@ -9,9 +7,7 @@ DB_ECHO=true
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REGISTER_WITH_DEMOSHOP=true
 LOGIN_WITH_DEMOSHOP=true
-DEMO_SHOP_URL=http://localhost:3005
+DEMO_SHOP_URL=http://127.0.0.1:3005
 ANOMALY_DETECTION=true
-# Algorithm for anomaly detection
-ANOMALY_MODEL=lof
 REAUTH_PER_REQUEST=false
 ZERO_TRUST_API_KEY=demo-key
