Improved the reference to the demo-shop URL

--- a/frontend/.env
+++ b/frontend/.env
@@ -4,4 +4,4 @@
 # REACT_APP_API_BASE=https://api.example.com
 # REACT_APP_API_BASE=http://localhost:8001
 REACT_APP_API_BASE=http://127.0.0.1:8001
-REACT_APP_SHOP_URL=http://127.0.0.1:3005
+REACT_APP_SHOP_URL=http://localhost:3005
