--- a/demo-shop/package.json
+++ b/demo-shop/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "node-fetch": "^2.6.12"
   }
 }
