Set-up files for prometheus

--- a/infra/k8s/detector-servicemonitor.yaml
+++ b/infra/k8s/detector-servicemonitor.yaml
@@ -1,18 +1,23 @@
+# detector-servicemonitor.yaml
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: detector
-  namespace: monitoring              # must match your Prometheus installation namespace
+  namespace: monitoring            # Prometheus stack namespace
   labels:
-    release: kube-prom               # match the “release” label of your Prometheus chart
+    release: kube-prom             # must match your kube-prometheus-stack release label
 spec:
   selector:
     matchLabels:
-      app: detector                  # the same label you put on the Service
+      app: detector                # must match labels on the Service
   namespaceSelector:
     matchNames:
-      - demo                         # where your detector Service lives
+      - demo                       # namespace where the Service lives
   endpoints:
-    - port: http-metrics             # name of the port in the Service
+    - port: http-metrics           # MUST equal the Service port *name*
       path: /metrics
       interval: 15s
+      scheme: https                # your app serves HTTPS in-cluster
+      tlsConfig:
+        insecureSkipVerify: true   # self-signed; switch to caFile if you add a CA
+      honorLabels: true
