--- a/demo-shop/.env
+++ b/demo-shop/.env
@@ -1,4 +1,7 @@
-FORWARD_API=true
+PORT=3005
 API_BASE=http://127.0.0.1:8001
 API_KEY=demo-key
+FORWARD_API=true
 API_TIMEOUT_MS=5000
+APISHIELD_URL=http://127.0.0.1:8001
+REAUTH_PER_REQUEST=true
