--- a/demo-shop/.env
+++ b/demo-shop/.env
@@ -4,4 +4,4 @@ API_KEY=demo-key
 FORWARD_API=true
 API_TIMEOUT_MS=5000
 APISHIELD_URL=http://127.0.0.1:8001
-REAUTH_PER_REQUEST=true
+REAUTH_PER_REQUEST=false
